# stechec2

./: .clang-format  .gitignore  .travis.yml  AUTHORS  COPYING  README  README.rst  TODO  flake.nix  stechec2.nix  waf.py  wscript
.github/workflows/: stechec2-build.yml  stechec2-generator-test.yml
doc/: Makefile  conf.py  development.rst  faq.rst  how-to.rst  index.rst  introduction.rst  rules.rst  server-install.rst  usage.rst
doc/_static/: README
games/: wscript
games/plusminus/: plusminus.yml  wscript
games/prolo2011/: prolo2011.yml  wscript
games/tictactoe/: .clang-format  tictactoe.cfg  tictactoe.yml  wscript
nix/: lib.nix  plusminus.nix  stechec2.nix  tictactoe.nix
pkg/stechec2/: PKGBUILD  build_deploy.sh
pkg/stechec2-makefiles/: PKGBUILD  build_deploy.sh
pkg/stechec2-sphinxdoc/: PKGBUILD
src/client/: client.cc  client.hh  main.cc  options.cc  options.hh
src/replay/: main.cc  replay.cc  replay.hh
src/server/: client.cc  client.hh  main.cc  options.cc  options.hh  server.cc  server.hh
tools/: gendiff.py  run.sh  setup_dbg.sh  stechec2-run  stechec2-run.py  wscript
tools/generator/: __main__.py  champions.py  common.py  entrypoint.sh.in  game.py  generator.in  generator.py  generator.rb  make_rules.py  player.py  rules.py  sphinxdoc.py  texdoc.py  wscript
tools/master-node/: Makefile.am  __main__.py  master-node.in  master-node.yml.in  paths.py.in  task.py  utils.py  worker.py  wscript
tools/rubygenerator/: conf.rb.in  generator.rb  wscript
tools/waf/: wafgenerator.py
tools/worker-node/: __main__.py  compile-champion.sh  wscript  (+4 more)
(+328 files in other folders)
